syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

service CompanyJobEducation {
    rpc ReadCompanyJobEducation (CompanyJobEducationIdRequest) returns (CompanyJobEducationPayload);
    rpc CreateCompanyJobEducation (CompanyJobEducationPayload) returns (google.protobuf.Empty);
    rpc UpdateCompanyJobEducation (CompanyJobEducationPayload) returns (google.protobuf.Empty);
    rpc DeleteCompanyJobEducation (CompanyJobEducationPayload) returns (google.protobuf.Empty);
}

message CompanyJobEducationIdRequest {
	string Id = 1;
}

message CompanyJobEducationPayload {
    string Id = 1;
	string Job = 2;
	string Major =3;
	int32 Importance = 4;
}